# BajraAssignments

./: Readme.md
Database/: .env.example  .gitignore  Dockerfile  Readme.md  app.py  db_init.py  docker-compose.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  schema.sql
Doctoring/: .env.example  .gitignore  Dockerfile  Readme.md  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml
Doctoring/Auth/: helpers.py  mixins.py  models.py  urls.py  views.py
Doctoring/Auth/migrations/: 0001_initial.py  0002_delete_doctor.py  0002_doctor_available.py  0003_alter_doctor_phone_alter_receptionist_phone.py
Doctoring/Auth/templates/: login.html  signup.html
Doctoring/Doctoring/: asgi.py  settings.py  urls.py  wsgi.py
Doctoring/core/: admin.py  forms.py  models.py  urls.py  views.py
Doctoring/core/migrations/: 0001_initial.py  0002_alter_appointment_doctor.py  0002_alter_appointment_patient.py  0002_remove_patient_age.py  0003_alter_patient_phone.py  0003_patient_patient_issue.py  0004_rename_patient_issue_patient_issue.py  0005_remove_receptionist_user_alter_appointment_doctor_and_more.py
Doctoring/doctor/: models.py  urls.py  views.py
Doctoring/doctor/migrations/: 0001_initial.py
Doctoring/receptionist/: models.py  urls.py  views.py
Doctoring/static/scripts/: validate.js
Doctoring/templates/: all_appointments.html  appointment_creation.html  base.html  doctor_appointments.html  doctor_dashboard.html  index.html  navbar.html  patient_confirm_delete.html  patient_detail.html  patient_edit.html  receptionist_dashboard.html
(+6 files in other folders)
